text color contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karma:wght@300;500&family=Roboto:wght@300&family=Source+Serif+4:opsz,wght@8..60,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karma:wght@300&family=Roboto:wght@300&family=Source+Serif+4:opsz,wght@8..60,300&display=swap');
 :root {
-    --primary-color: #8ca9d5ff;
+    --primary-color: #000000;
     --secondary-color: #566069ff;
     --accent1-color: #9aa6b7ff;
     --accent2-color: #222e31ff;
